# deepmlab

./: .gitattributes  .gitignore  .gitlab-ci.yml  README.md
scilab/modules/differential_equations/: .gitignore  Makefile.am  Makefile.in  differential_equations.iss  license.txt
scilab/modules/differential_equations/demos/: differential_equations.dem.gateway.sce
scilab/modules/differential_equations/demos/bike/: bike.dem.gateway.sce  bike1.dem.sce  bike2.dem.sce
scilab/modules/differential_equations/demos/dae/: dae.dem.gateway.sce
scilab/modules/differential_equations/demos/flow/: blackhole.dem.sce  blackhole.sci  blackhole_interface.sci  create_interface.sci  cylinder.dem.sce  cylinder.sci  cylinder_interface.sci  flow.dem.gateway.sce  sphere.dem.sce  sphere.sci  sphere_interface.sci
scilab/modules/differential_equations/demos/levitron/: levitron.dem.sce  levitron.sci  levitron_gui.sci
scilab/modules/differential_equations/demos/n_pendulum/: macros.sci  n_pendulum.dem.sce  n_pendulum.sci
scilab/modules/differential_equations/demos/ode/: ode.dem.gateway.sce
scilab/modules/differential_equations/demos/sundials/: ball.dem.sce  demo_cardioid_pendulum.sce  demo_chain.sce  demo_double_pendulum.sce  demo_npend.sce  demo_single_pendulum.sce  demo_sir_ident.sce  demo_spline_pendulum.sce  index2.sci  lagrangian.dem.gateway.sce  lagrangian_DAE.sce  lorenz.dem.sce  minimal.dem.sce  pend3d1.dem.sce  springboard.dem.sce  sundials.dem.gateway.sce
scilab/modules/differential_equations/demos/wheel/: wheel.dem.gateway.sce  wheel1.dem.sce  wheel2.dem.sce  wheel_show.sci
scilab/modules/differential_equations/etc/: differential_equations.quit  differential_equations.start
scilab/modules/differential_equations/help/en_US/: addchapter.sce  bvode.xml  dae.xml  dae_root.xml  daeoptions.xml  diff.xml  diffxy.xml  gradient.xml  int2d.xml  intc.xml  integrate.xml  intg.xml  intl.xml  inttrap.xml  numderivative.xml  ode.xml  ode_discrete.xml  ode_optional_output.xml  ode_root.xml  odedc.xml  odeoptions.xml
scilab/modules/differential_equations/help/fr_FR/: addchapter.sce  dae.xml  intc.xml  integrate.xml  intg.xml  intsplin.xml  numderivative.xml  ode.xml
scilab/modules/differential_equations/help/ja_JP/: addchapter.sce  bvode.xml  daeoptions.xml  diff.xml  int2d.xml  intc.xml  integrate.xml  intg.xml  intl.xml  inttrap.xml  ode.xml  ode_discrete.xml  ode_optional_output.xml  ode_root.xml  odedc.xml  odeoptions.xml
scilab/modules/differential_equations/help/pt_BR/: addchapter.sce  daeoptions.xml  diff.xml  int2d.xml  intc.xml  integrate.xml  intg.xml  intl.xml  inttrap.xml  ode.xml  ode_discrete.xml  ode_optional_output.xml  ode_root.xml  odedc.xml  odeoptions.xml
scilab/modules/differential_equations/help/ru_RU/: addchapter.sce  bvode.xml  daeoptions.xml  diff.xml  int2d.xml  intc.xml  integrate.xml  intg.xml  intl.xml  inttrap.xml  ode.xml  ode_discrete.xml  ode_optional_output.xml  ode_root.xml  odedc.xml  odeoptions.xml
scilab/modules/differential_equations/includes/: ARKODEManager.hxx  CVODEManager.hxx  IDAManager.hxx  KINSOLBridge.hxx  KINSOLManager.hxx  LSODARManager.hxx  OdeManager.hxx  SUNDIALSBridge.hxx  SUNDIALSManager.hxx  checkodeerror.hxx  common_structure.h  complexHelpers.hxx  differential_equations_gw.hxx  differentialequationfunctions.hxx  dynlib_differential_equations.h  dynlib_differential_equations_gw.h  gw_differential_equations1.h  gw_differential_equations2.h  gw_differential_equations3.h  gw_differential_equations4.h  gw_differential_equations6.h  odeparameters.hxx  scifunctions.h  sundials_gw.hxx
scilab/modules/differential_equations/locales/: differential_equations.pot
scilab/modules/differential_equations/macros/: %SUN_DormandPrince6.sci  %SUN_DormandPrince8.sci  %SUN_Tsitouras5.sci  %SUN_bruss.sci  %SUN_brussE.sci  %SUN_brussI.sci  %SUN_sir.sci  %SUN_vdp1.sci  SUN_Clink.sci  buildmacros.sce  dae.sci  daeoptions.sci  diffxy.sci  gradient.sci  intc.sci  integrate.sci  intl.sci  intsplin.sci  inttrap.sci  numderivative.sci  odeoptions.sci
scilab/modules/differential_equations/sci_gateway/: differential_equations_gateway.xml  differential_equations_gw.vcxproj  differential_equations_gw.vcxproj.filters
scilab/modules/differential_equations/sci_gateway/c/: sci_bvode.c  sci_feval.c  sci_int2d.c  sci_int3d.c  sci_intg.c  sci_odc.c  sci_ode.c
scilab/modules/differential_equations/sci_gateway/cpp/: differential_equations_gw.cpp  sci_arkode.cpp  sci_bvode.cpp  sci_cvode.cpp  sci_daskr.cpp  sci_dasrt.cpp  sci_dassl.cpp  sci_feval.cpp  sci_ida.cpp  sci_impl.cpp  sci_int2d.cpp  sci_int3d.cpp  sci_intg.cpp  sci_kinsol.cpp  sci_ode.cpp  sci_odedc.cpp  sci_percent_odeSolution.cpp  sci_sundialsode.hpp
scilab/modules/differential_equations/src/c/: Ex-daskr.h  Ex-ode.c  (+21 more)
scilab/modules/slint/: Makefile.am  Makefile.in  slint.iss  slint.rc  slint.vcxproj
scilab/modules/slint/etc/: slint.start  slint.xml
scilab/modules/slint/includes/: FileException.hxx  PCRE.hxx  PCREException.hxx  PCREMatcher.hxx  SLint.hxx  SLintContext.hxx  SLintOptions.hxx  SLintVisitor.hxx  SLintXMLException.hxx  SciFile.hxx  XMLtools.hxx  dynlib_slint.h  slint_gw.hxx
scilab/modules/slint/locales/: slint.pot
scilab/modules/slint/macros/: buildmacros.sce
scilab/modules/slint/sci_gateway/: slint_gateway.xml
scilab/modules/sparse/: Makefile.am  Makefile.in  sparse.iss
scilab/modules/sparse/demos/: minimalsurface.sce  minimalsurfacepattern.sce  sparse.dem.gateway.sce  testHessian.sce  testJac.sce
scilab/modules/sparse/etc/: sparse.start
scilab/modules/sparse/includes/: dynlib_sparse.h  dynlib_sparse_gw.h  gw_sparse.h  sp.h  spCompGeneric.hxx  spCompHessian.hxx  spCompJacobian.hxx  spConfig.h  sparse_gw.hxx  spmalloc.h  spmatrix.h
scilab/modules/sparse/locales/: sparse.pot
scilab/modules/sparse/macros/: %_spCompHessian_p.sci  %_spCompJacobian_p.sci  %bicg.sci  %bicgstab.sci  %cgs.sci  %pcg.sci  blkslv.sci  buildmacros.bat  buildmacros.sce  chfact.sci  chsolve.sci  cleanmacros.bat  conjgrad.sci  gmres.sci  issparse.sci  qmr.sci  speye.sci  sprand.sci  spyCol.sci  spzeros.sci
(+24534 files in other folders)
